tests/snapshots/compiler_tests__pointer_receiver_writes_through.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

%Counter = type { n: i32 }

<func0>  func @Counter_set( ptr %self,  i32 %v) {
bb0:
    %self.addr = alloca ptr , align 8
    store %self, ptr %self.addr, align 8, ty ptr
    %v.addr = alloca i32 , align 4
    store %v, ptr %v.addr, align 4, ty i32
    %wrote = alloca i32 , align 4
    %0 = load ptr, ptr %self.addr, align 8
    %1 = gep %Counter, ptr %0, indices [0, 0]
    %2 = load i32, ptr %v.addr, align 4
    store %2, ptr %1, align 4, ty i32
    store 0, ptr %wrote, align 4, ty i32
    %3 = load i32, ptr %wrote, align 4
    ret %3
}

<func1>  func @Counter_read( ptr %self) {
bb1:
    %self.addr = alloca ptr , align 8
    store %self, ptr %self.addr, align 8, ty ptr
    %got = alloca i32 , align 4
    %4 = load ptr, ptr %self.addr, align 8
    %5 = gep %Counter, ptr %4, indices [0, 0]
    %6 = load i32, ptr %5, align 4
    store 0, ptr %got, align 4, ty i32
    %7 = load i32, ptr %got, align 4
    ret %7
}

<func2>  func @mutate_caller() {
bb2:
    %c = alloca %Counter , align 4
    %8 = gep %Counter, ptr %c, indices [0, 0]
    store 5, ptr %8, align 4, ty i32
    %p = alloca ptr , align 8
    %9 = addr_of %c
    store %9, ptr %p, align 8, ty ptr
    %10 = load ptr, ptr %p, align 8
    %11 = call @func0(%10, 99)
    %12 = gep %Counter, ptr %c, indices [0, 0]
    %13 = load i32, ptr %12, align 4
    ret %13
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (1):
--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 0)
--------------------------------------------------
  [0000] return

==================================================
