tests/snapshots/compiler_tests__qualified_impl_block.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

%Counter = type { n: i32 }

<func0>  $func @Counter_get( %Counter %self) {
bb0:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %0 = gep %Counter, ptr %self.addr, indices [0, 0]
    %1 = load i32, ptr %0, align 4
    ret %1
}

<func1>  $func @Counter_scaled( %Counter %self,  i32 %k) {
bb1:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %k.addr = alloca i32 , align 4
    store %k, ptr %k.addr, align 4, ty i32
    %2 = gep %Counter, ptr %self.addr, indices [0, 0]
    %3 = load i32, ptr %2, align 4
    %4 = load i32, ptr %k.addr, align 4
    %5 = mul %3, %4
    ret %5
}

<func2>  $func @Counter_doubled( %Counter %self) {
bb2:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %6 = gep %Counter, ptr %self.addr, indices [0, 0]
    %7 = load i32, ptr %6, align 4
    %8 = mul %7, 2
    ret %8
}

<func3> {c} func @Counter_cconv( %Counter %self) {
bb3:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %9 = gep %Counter, ptr %self.addr, indices [0, 0]
    %10 = load i32, ptr %9, align 4
    ret %10
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (4):
--------------------------------------------------
func @Counter_get (mode: Read, params: 1, registers: 6)
--------------------------------------------------
  [0000] r1 = alloca size: 4, align: 4
  [0001] store [r1], r0 (%Counter) (mode: Read)
  [0002] r3 = 0 (usize)
  [0003] r4 = 0 (usize)
  [0004] r2 = gep r1, [r3, r4] (%Counter)
  [0005] load r5, [r2] (i32) (mode: Read)
  [0006] return r5

--------------------------------------------------
func @Counter_scaled (mode: Read, params: 2, registers: 10)
--------------------------------------------------
  [0000] r2 = alloca size: 4, align: 4
  [0001] store [r2], r0 (%Counter) (mode: Read)
  [0002] r3 = alloca size: 4, align: 4
  [0003] store [r3], r1 (i32) (mode: Read)
  [0004] r5 = 0 (usize)
  [0005] r6 = 0 (usize)
  [0006] r4 = gep r2, [r5, r6] (%Counter)
  [0007] load r7, [r4] (i32) (mode: Read)
  [0008] load r8, [r3] (i32) (mode: Read)
  [0009] r9 = r7 * r8
  [0010] return r9

--------------------------------------------------
func @Counter_doubled (mode: Read, params: 1, registers: 8)
--------------------------------------------------
  [0000] r1 = alloca size: 4, align: 4
  [0001] store [r1], r0 (%Counter) (mode: Read)
  [0002] r3 = 0 (usize)
  [0003] r4 = 0 (usize)
  [0004] r2 = gep r1, [r3, r4] (%Counter)
  [0005] load r5, [r2] (i32) (mode: Read)
  [0006] r7 = 2 (i32)
  [0007] r6 = r5 * r7
  [0008] return r6

--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 0)
--------------------------------------------------
  [0000] return

==================================================
